// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTable /> Should render correctly and match snapshot when provided all player ratings data 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MTableToolbar-root MuiToolbar-gutters"
    >
      <div
        class="MTableToolbar-title"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6"
          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          Table Title
        </h6>
      </div>
      <div
        class="MTableToolbar-spacer"
      />
      <div
        class="MuiFormControl-root MuiTextField-root MTableToolbar-searchField"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              title="Search"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            aria-label="Search"
            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-disabled MuiButtonBase-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                >
                  clear
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MTableToolbar-actions"
      >
        <div>
          <div>
            <span />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Component-horizontalScrollContainer"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Player Name
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="1"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="1"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Start Rating
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="2"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="2"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        End Rating
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="3"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="3"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Rating Change
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="4"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="4"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Number of Matches
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Villager"
                  >
                    Villager
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1000"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="973"
                  >
                    973
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="-27"
                  >
                    -27
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="52"
                  >
                    52
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="1"
                  level="0"
                  path="1"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Luigi"
                  >
                    Luigi
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1000"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="964"
                  >
                    964
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="-36"
                  >
                    -36
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="61"
                  >
                    61
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="2"
                  level="0"
                  path="2"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Dry bones"
                  >
                    Dry bones
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1000"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1002"
                  >
                    1002
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="2"
                  >
                    2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="61"
                  >
                    61
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="3"
                  level="0"
                  path="3"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Baby peach"
                  >
                    Baby peach
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1000"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1003"
                  >
                    1003
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="3"
                  >
                    3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="64"
                  >
                    64
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="4"
                  level="0"
                  path="4"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Bowser"
                  >
                    Bowser
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1000"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1026"
                  >
                    1026
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="26"
                  >
                    26
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="61"
                  >
                    61
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 1px;"
                />
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tfoot
        class="MuiTableFooter-root"
        style="display: grid;"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-footer"
        >
          <td
            class="MuiTableCell-root MuiTableCell-footer MuiTablePagination-root Component-paginationRoot"
            colspan="3"
            icons="[object Object]"
            style="float: right; overflow-x: auto;"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar Component-paginationToolbar MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption MuiTypography-body2 MuiTypography-colorInherit"
                id="mui-24680"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot Component-paginationSelectRoot"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-24680 mui-72027"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                  id="mui-72027"
                  role="button"
                  tabindex="0"
                >
                  <div
                    style="padding: 0px 5px;"
                  >
                    10 rows 
                  </div>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption MuiTypography-body2 MuiTypography-colorInherit"
              >
                1-5 of 5
              </p>
              <div
                class="MTablePaginationInner-root"
              >
                <span
                  class=""
                  title="First Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-disabled MuiButtonBase-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Previous Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-disabled MuiButtonBase-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                  style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                >
                  1-5 of 5
                </span>
                <span
                  class=""
                  title="Next Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-disabled MuiButtonBase-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Last Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-disabled MuiButtonBase-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</DocumentFragment>
`;

exports[`<DataTable /> Should render correctly and match snapshot when provided single player matches data 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MTableToolbar-root-33 MuiToolbar-gutters"
    >
      <div
        class="MTableToolbar-title-37"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6"
          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          Table Title
        </h6>
      </div>
      <div
        class="MTableToolbar-spacer-35"
      />
      <div
        class="MuiFormControl-root MuiTextField-root MTableToolbar-searchField-38"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              title="Search"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            aria-label="Search"
            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                >
                  clear
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MTableToolbar-actions-36"
      >
        <div>
          <div>
            <span />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Component-horizontalScrollContainer-40"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-41 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-2-hidden-text-14"
                        data-rbd-drag-handle-context-id="2"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="2"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Match Date / Time
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-41 MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-2-hidden-text-14"
                        data-rbd-drag-handle-context-id="2"
                        data-rbd-drag-handle-draggable-id="1"
                        data-rbd-draggable-context-id="2"
                        data-rbd-draggable-id="1"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Place
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-41 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <div
                      aria-describedby="rbd-hidden-text-2-hidden-text-14"
                      data-rbd-drag-handle-context-id="2"
                      data-rbd-drag-handle-draggable-id="2"
                      data-rbd-draggable-context-id="2"
                      data-rbd-draggable-id="2"
                      draggable="false"
                      role="button"
                      tabindex="0"
                    >
                      Standings
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-41 MuiTableCell-alignRight"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-2-hidden-text-14"
                        data-rbd-drag-handle-context-id="2"
                        data-rbd-drag-handle-draggable-id="3"
                        data-rbd-draggable-context-id="2"
                        data-rbd-draggable-id="3"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Rating At Match End
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-41 MuiTableCell-alignRight"
                    scope="col"
                    style="text-align: right; box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-2-hidden-text-14"
                        data-rbd-drag-handle-context-id="2"
                        data-rbd-drag-handle-draggable-id="4"
                        data-rbd-draggable-context-id="2"
                        data-rbd-draggable-id="4"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        Points Won / Lost
                      </div>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Mar 22, 2020 1:23 AM"
                  >
                    Mar 22, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="2"
                  >
                    2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Dry bones, Bowser, Black shy guy, Luigi"
                  >
                    Dry bones, Bowser, Black shy guy, Luigi
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1016"
                  >
                    1016
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="16"
                  >
                    16
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="1"
                  level="0"
                  path="1"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Mar 25, 2020 1:23 AM"
                  >
                    Mar 25, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="2"
                  >
                    2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Villager, Bowser, Black shy guy, Baby peach"
                  >
                    Villager, Bowser, Black shy guy, Baby peach
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1027"
                  >
                    1027
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="11"
                  >
                    11
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="2"
                  level="0"
                  path="2"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Mar 26, 2020 1:23 AM"
                  >
                    Mar 26, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="3"
                  >
                    3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Waluigi, Luigi, Bowser, Black shy guy"
                  >
                    Waluigi, Luigi, Bowser, Black shy guy
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1003"
                  >
                    1003
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-24"
                  >
                    -24
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="3"
                  level="0"
                  path="3"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Mar 27, 2020 1:23 AM"
                  >
                    Mar 27, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="4"
                  >
                    4
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Dry bones, Mario, Waluigi, Bowser"
                  >
                    Dry bones, Mario, Waluigi, Bowser
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="960"
                  >
                    960
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-43"
                  >
                    -43
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="4"
                  level="0"
                  path="4"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 5, 2020 1:23 AM"
                  >
                    Apr 5, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="4"
                  >
                    4
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Waluigi, Villager, Baby peach, Bowser"
                  >
                    Waluigi, Villager, Baby peach, Bowser
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="924"
                  >
                    924
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-36"
                  >
                    -36
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="5"
                  level="0"
                  path="5"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 9, 2020 1:23 AM"
                  >
                    Apr 9, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="4"
                  >
                    4
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Waluigi, Dry bones, Mario, Bowser"
                  >
                    Waluigi, Dry bones, Mario, Bowser
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="890"
                  >
                    890
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-34"
                  >
                    -34
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="6"
                  level="0"
                  path="6"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 11, 2020 1:23 AM"
                  >
                    Apr 11, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="2"
                  >
                    2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Luigi, Bowser, Baby peach, Black shy guy"
                  >
                    Luigi, Bowser, Baby peach, Black shy guy
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="913"
                  >
                    913
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="23"
                  >
                    23
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="7"
                  level="0"
                  path="7"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 12, 2020 1:23 AM"
                  >
                    Apr 12, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="4"
                  >
                    4
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Luigi, Baby peach, Mario, Bowser"
                  >
                    Luigi, Baby peach, Mario, Bowser
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="874"
                  >
                    874
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-39"
                  >
                    -39
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="8"
                  level="0"
                  path="8"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 13, 2020 1:23 AM"
                  >
                    Apr 13, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="3"
                  >
                    3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Baby peach, Black shy guy, Bowser, Dry bones"
                  >
                    Baby peach, Black shy guy, Bowser, Dry bones
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="864"
                  >
                    864
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="-10"
                  >
                    -10
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="9"
                  level="0"
                  path="9"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Apr 14, 2020 1:23 AM"
                  >
                    Apr 14, 2020 1:23 AM
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="1"
                  >
                    1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="Bowser, Mario, Luigi, Baby peach"
                  >
                    Bowser, Mario, Luigi, Baby peach
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit;"
                    value="932"
                  >
                    932
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                    style="box-sizing: border-box; font-family: inherit; font-weight: inherit; text-align: center;"
                    value="68"
                  >
                    68
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tfoot
        class="MuiTableFooter-root"
        style="display: grid;"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-footer"
        >
          <td
            class="MuiTableCell-root MuiTableCell-footer MuiTablePagination-root Component-paginationRoot-29"
            colspan="3"
            icons="[object Object]"
            style="float: right; overflow-x: auto;"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar Component-paginationToolbar-30 MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-31 MuiTypography-body2 MuiTypography-colorInherit"
                id="mui-97978"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot Component-paginationSelectRoot-32"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-97978 mui-93701"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                  id="mui-93701"
                  role="button"
                  tabindex="0"
                >
                  <div
                    style="padding: 0px 5px;"
                  >
                    10 rows 
                  </div>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-31 MuiTypography-body2 MuiTypography-colorInherit"
              >
                1-10 of 62
              </p>
              <div
                class="MTablePaginationInner-root-42"
              >
                <span
                  class=""
                  title="First Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Previous Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                  style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                >
                  1-10 of 62
                </span>
                <span
                  class=""
                  title="Next Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </span>
                <span
                  class=""
                  title="Last Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</DocumentFragment>
`;
